--- a/src/components/navbar/style.module.css
+++ b/src/components/navbar/style.module.css
@@ -8,7 +8,7 @@
     border: 0px;
     border-bottom: 2px;
     border-style: solid;
-    border-image: linear-gradient(to right, red, blue,green);
+    border-image: linear-gradient(to right, rgba(255, 0, 0, 0.466), rgba(0, 0, 255, 0.37),rgba(0, 128, 0, 0.356));
     border-image-slice: 1;
 }
 
@@ -33,10 +33,11 @@
     align-items: center;
     display: flex;
     width: 100%;
+    border-radius: 5px;
 }
 
 .item:hover {
-    background-image: linear-gradient(to right, red, blue,green);
+    /* background-image: linear-gradient(45deg, rgba(255, 0, 0, 0.322), rgba(0, 0, 255, 0.342),rgba(0, 128, 0, 0.534)); */
     height: 100%;
 }
 .item a {
@@ -46,14 +47,19 @@
     height: 100%;
     width: 100%;
     display: flex;
+    font-weight: bold;
     margin: 0em 3em;
 }
 
 .item a:hover {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.534);
     text-decoration: none;
+    font-weight: bold;
 }
 
 .logo {
     width: 15%;
+    margin: 1em 1em;
 }
+
