--- a/src/components/main/style.module.css
+++ b/src/components/main/style.module.css
@@ -7,12 +7,13 @@
     min-height: 100%;
     border-radius: 10px;
     overflow: auto;
+    /* opacity: 0.9; */
     /* margin: 0px auto; */
     /* padding: 0em 3em; */
 }
 .header {
     margin: 0 0 0 0 ;
-    background-color: #fff;
+    background-color: #ffffffde ;
     border-radius: 10px 10px 0px 0px;
     /* padding: 1em 3em 0em 3em; */
     justify-content: space-between;
@@ -24,5 +25,64 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    background-color: #fff;
+    background-color: #ffffffde;
+    border-radius: 0px 0px 10px 10px;
+    border-radius: 0px 0px 10px 10px;    
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 1em 0em 0em 0em;
+    
+}
+
+.buttons button {
+    background-color: rgb(0, 128, 0);
+    border: rgb(1, 32, 1);
+    /* border: none; */
+    width: 10%;
+    padding: 0.5em;
+    color: white;
+    font-weight: bold;
+    border-radius:5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    
+}
+.buttons button:hover {
+    border: 1px solid rgb(255, 255, 255);
+    cursor: pointer;
+    
+}
+
+.buttons button:disabled {
+    background-color: gray;
+    border: none;
+    cursor: default;
+}
+
+
+@media (max-width: 800px) {
+    .main {
+        width: 100%;
+        padding: 0em;
+    }
+    .header {
+        padding: 1em 1em 0em 1em;
+    }
+    .content {
+        padding: 1em;
+    }
+}
+
+@media(max-width : 480px){
+    .main{
+        width: 100%;
+        padding: 0em;
+    }
+    .header{
+        padding: 1em 1em 0em 1em;
+    }
+    
 }
