--- a/src/components/navbar/style.module.css
+++ b/src/components/navbar/style.module.css
@@ -63,3 +63,65 @@
     width: 8%;
     margin: 0em 1em;
 }
+
+
+
+@media (max-width: 1500px) {
+    .navbar {
+        background-color: antiquewhite;
+    }
+    
+    .item a {
+        margin: 0em;
+        padding: 1em;
+       
+        
+    }
+    .item {
+        margin: .5em
+    }
+    .logo {
+        width: 10%;
+        padding: 0% 5%;
+        margin: 0em;
+    }
+    .list {
+        width: 60%;
+        margin: 0%;
+    }
+}
+@media(max-width: 800px)
+{
+    .logo{
+        width: 30%;
+        padding: 0% 5%;
+        margin: 0em;
+    }
+
+}
+
+@media (max-width: 480px) {
+    .navbar {
+        background-color: antiquewhite;
+    }
+    
+    .item a {
+        margin: 0em;
+        padding: 0.2em;
+       
+        
+    }
+    .item {
+        margin: .5em
+    }
+    .logo {
+        width: 60%;
+        padding: 0% 5%;
+        margin: 0em;
+    }
+    .list {
+        width: 60%;
+        margin: 0%;
+    }
+}
+
