--- a/src/components/tab/allTabs/firstTab/style.module.css
+++ b/src/components/tab/allTabs/firstTab/style.module.css
@@ -1,14 +1,21 @@
 .img {
-    /* width: 25%; */
-    height: 400px;
+    width: 100%;
+    /* height: 300px; */
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    animation-name: fade;
-    animation-duration: 1.5s;
-    /* display: none; */
-    animation-name: fade;
-  animation-duration: 1.5s;
+    
+    
 
+
+}
+
+
+
+.divimg {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: auto;
+    height: auto;
 
 }
 
@@ -97,69 +104,24 @@
     background: #d685ad;
 }
 
-/* SLIDESHOW */
-
-@keyframes img {
-    from {opacity: .4}
-    to {opacity: 1}
-  }
-
-.slideshow {
-    max-width: 1000px;
-  position: relative;
-  margin: auto;
+@media(max-width : 480px){
+    .content{
+        flex-direction: column;
+        align-items: center;
+    }
+    .divimg {
+        width: 80%;
+        height: auto;
+    }
+    .img{
+        width:100%;
+        height: auto;
+    }
+    .info{
+        width: 80%;
+        height: auto;
+    }
 }
-
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
 
 
 
