--- a/src/components/tab/allTabs/secondTab/style.module.css
+++ b/src/components/tab/allTabs/secondTab/style.module.css
@@ -3,7 +3,6 @@
     /* display: flex; */
     width: 100%;
     justify-content: space-evenly;
-    border: 1px solid red;
     height: auto;
     width: 100%;}
 
@@ -18,4 +17,12 @@
     width: auto;
     margin: 2% 0%;
     padding: 1%;
+    list-style: none;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;}
+
+.item span {
+        text-transform: capitalize;
+        background-color: rgba(255, 0, 0, 0.363);
+        padding: 0.1em;
+        border-radius: 2px;
+}
